# detectionsSimulations

./: README.md  executionTimes
detectionCleaned/1_samples/: filter.py
detectionTest/: HoughForests  STATUS
detectionTest/1_samples/: HoughForests  config_base.txt  createConfigFiles.py  runSamples.py  runTest.py  testTimer.txt  timer.txt
detectionTest/2_patchsize/: config_base.txt  configbasesample.txt  createConfigFiles.py  run.sh  testTimer.txt  timer.txt
detectionTest/3_trees/: config_base.txt  createConfigFiles.py  run.sh  runTest.py  runTrees.py  testTimer.txt  timer.txt
detectionTest/4_forests/: config_base.txt  createConfigFiles.py  run.sh  testTimer.txt  timer.txt
detectionTest/5_trainingsize/: config_base.txt  createConfigFiles.py  run.sh  testTimer.txt  timer.txt
detectionTest/forests/: run.py  (+3 more)
filter/: filter.py
football/: config.txt~  test.txt  test.txt~
hough/: CMakeCache.txt  CMakeLists.txt  CRForest-Detector.cpp  Makefile  Makefile~  cmake_install.cmake  run.sh  run_detect.sh  run_train.sh
hough/example/: config.txt  config.txt~
hough/football/: config.txt
hough/football/config/: config_1.txt  config_1.txt~  config_6.txt
hough/football/train_neg_txt/: train_neg.txt  train_neg54.txt~
hough/football/train_pos_txt/: train_pos.txt~  train_pos208.txt  train_pos26.txt  train_pos52.txt
hough/football/train_txt/: train_neg104.txt  train_neg208.txt  train_neg26.txt  train_neg54.txt  train_pos.txt  train_pos104.txt
hough/football/trainimages/positive/red/: sortRed.sh
hough/football/trees/1/: treetable000.txt  treetable003.txt
(+424 files in other folders)
